--- a/css/home.css
+++ b/css/home.css
@@ -186,7 +186,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  z-index: 1;
+  z-index: 10;
   background-color: var(--bg);
 }
 
@@ -217,7 +217,7 @@
 .services .service-card {
   position: relative;
   min-height: 300px;
-  z-index: 1;
+  z-index: 10;
 }
 
 .services .service-card-inner {
